--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+.form-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin:10% auto;
+    width:500px;
+    border:1px solid black;
+    padding: 20px 0px;
+    
 }
+.inputs,.buttons{
+ 
+  margin:10px auto;
+  
+  
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input , button{
+ 
+  padding:10px 20px;
+ 
+  outline: 0;
+  margin:0 auto;
+  border:1px solid gray;
+  border-radius: 5px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button{
+  background-color: blue;
+  color:white;
+  font-size: 18px;
 }
-
-.App-link {
-  color: #61dafb;
+.error{
+  color:red;
+  font-weight: bold;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sucess{
+  color:Green;
+  font-weight: bold;
 }
